src/styles/04-components/navbar.scss
.navbar {
  // max-width: 1111px;
  position: sticky;
  z-index: 1000;
  top: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;

  background-color: $base-color-white;

  @include breakpoint(lg) {
    margin: 64px auto 54px;
    padding-bottom: 32px;
  }
  @include breakpoint(xxl) {
    margin: 0;
  }
}

.brand-title-and-logo {
  text-align: center;
  margin: 25px;
}

.Header-title-text {
  font-size: 25px;
  white-space: nowrap;
}

.Header-sub-title-text {
  display: none;
  height: 125px;
  
  @include breakpoint(lg) {
    display: inline;
  }
}
.brand-logo {
  display: none;
  height: 125px;
  
  @include breakpoint(lg) {
    display: inline;
  }
}

.navbar-center {
  @include breakpoint(lg) {
    display: inline-block;
    justify-items: center;  }
 
}

.menu-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 32px;
}

.navbar-burger {
  display: flex;
  align-items: center;
}

.nav-hamburger {
  position: absolute;
  display: flex;
  cursor: pointer;
}

.nav-item {
  display: flex;
  position: absolute;
  z-index: 1000;
  top: 0;
  right: 100%;
  @include breakpoint(lg) {
    position: initial;
    right: 0;
    padding: 0;
  }
}

.nav-item.active {
  right: 0;
  top: 88px;
  display: contents;
  @include breakpoint(lg) {
    top: 0;
  }
}

.menu {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: $base-color-white;;
  // width: 350px;
  height: 186px;
  padding-left: 0;
  margin: 0;
  @include breakpoint(lg) {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    background-color: $base-color-white;
    height: auto;
    width: auto;
  }
}

.menu-item {
  list-style-type: none;
  text-transform: uppercase;
  font-size: 12px;
  line-height: 14px;
  letter-spacing: 2px;
  color: $base-color-white;
  @include breakpoint(lg) {
    padding-left: 43px;
  }
}

.menu-item a {
  text-decoration: none;
  color: black;
}

// .menu-item a {
//   color: $base-white;
//   @include breakpoint(lg) {
//     color: $primary-color-greyish-dark-blue;
//   }
// }

.navbar-hamburger,
.navbar-close {
  display: inline;
  border: none;
  background-color: $base-color-white;
  padding: 0;
  @include breakpoint(lg) {
    display: none;
  }
}

